# adv-ml-music-recommendation

./: .gitignore  README.md  pyproject.toml
adv_ml_music_recommendation/: database_connect_example.ipynb  main.py  svd.ipynb  test_vizualize.ipynb  tmp.ipynb  tmp2.ipynb  track_features.txt  vizualize.ipynb
adv_ml_music_recommendation/recommenders/: abstractrecommender.py  collaborativerecommender.py  contentbasedrecommender.py  hybridrecommender.py  popularityrecommender.py  recommenderevaluator.py  recommenderevaluatorOLD.py  tmp.ipynb
adv_ml_music_recommendation/util/: data_functions.py
docker/: docker-compose.yml  help.md
