[tool.poetry]
name = "adv-ml-music-recommendation"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"
spotipy = "^2.25.0"
gensim = "^4.3.3"
pyyaml = "^6.0.2"
notebook = "^7.3.2"
mysql-connector-python = "^9.1.0"
sqlalchemy = "^2.0.37"
loguru = "^0.7.3"
cupy-cuda12x = "^13.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
